--- a/admin/index.html
+++ b/admin/index.html
@@ -15,12 +15,18 @@ layout: null
     <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
     <script>
       const ProgramUpdatePreview = createClass({
-        alert(content) {
-          return h('div', { className: 'usa-alert usa-alert--info' },
-            h('div', { className: 'usa-alert__body' },
-              h('p', { className: 'usa-alert__text' },
-                content
-              )
+        accordion(title, content, id) {
+          return h('div', { class: 'usa-accordion usa-accordion--bordered' },
+            h('h4', { class: 'usa-accordion__heading' },
+              h('button', {
+                type: 'button',
+                class: 'usa-accordion__button',
+                'aria-expanded': 'true',
+                'aria-controls': id
+              }, title)
+            ),
+            h('div', { id: id, class: 'usa-accordion__content' },
+              content
             )
           );
         },
@@ -34,16 +40,14 @@ layout: null
         indexView(title, date, preview) {
           return h('div', { class: 'index-view' },
             h('ul', { class: 'usa-collection partners-collection' },
-              h('li', { class: 'usa-collection__item partners-collection__item' },
-                h('div', { class: 'usa-collection__body' },
-                  h('h3', { class: 'usa-collection__heading' },
-                    h('a', { class: 'partners-link caret', href: '#' }, title)
-                  ),
-                  h('div', { class: 'usa-collection__description partners-body' }, preview),
-                  h('ul', { class: 'usa-collection__meta' },
-                    h('li', { class: 'usa-collection__meta-item' },
-                      h('time', { datetime: date }, date)
-                    )
+              h('div', { class: 'usa-collection__body' },
+                h('h3', { class: 'usa-collection__heading' },
+                  h('a', { class: 'partners-link caret', href: '#' }, title)
+                ),
+                h('div', { class: 'usa-collection__description partners-body' }, preview),
+                h('ul', { class: 'usa-collection__meta' },
+                  h('li', { class: 'usa-collection__meta-item' },
+                    h('time', { datetime: date }, date)
                   )
                 )
               )
@@ -79,16 +83,16 @@ layout: null
           const preview = this.props.widgetFor('preview') || h('p', {}, '(Missing preview text)');
           const date = entry.getIn(['data', 'date']);
           const formattedDate = this.formatDate(date);
+          const indexView = this.indexView(title, formattedDate, preview);
+          const entryView = this.entryView(title, formattedDate, body);
 
           return h('div', {
             class: 'container partners-container',
             style: { backgroundColor: '#fff' }
           },
-            this.alert('Preview of index page listing'),
-            this.indexView(title, formattedDate, preview),
+            this.accordion('Preview of index page listing', indexView, 'index-preview'),
             h('br'),
-            this.alert('Preview of program update entry'),
-            this.entryView(title, formattedDate, body),
+            this.accordion('Preview of program update entry', entryView, 'entry-preview'),
           );
         }
       });
@@ -98,7 +102,7 @@ layout: null
       {% endfor %}
 
       CMS.registerPreviewTemplate('program_updates', ProgramUpdatePreview);
-    </script>
+    </script>    
   </body>
 
 </html>
