--- a/admin/index.html
+++ b/admin/index.html
@@ -12,7 +12,7 @@ layout: null
 
   <body>
     <!-- Include the script that builds the page and powers Netlify CMS -->
-    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
+    <script src="{{ '/assets/js/netlify-cms-2.10.192.js' | relative_url }}"></script>
     <script>
       const ProgramUpdatePreview = createClass({
         accordion(title, content, id) {
