Update admin index page

--- a/admin/index.html
+++ b/admin/index.html
@@ -11,98 +11,8 @@ layout: null
   </head>
 
   <body>
-    <!-- Include the script that builds the page and powers Netlify CMS -->
-    <script src="https://unpkg.com/netlify-cms@^2.0.0/dist/netlify-cms.js"></script>
-    <script>
-      const ProgramUpdatePreview = createClass({
-        accordion(title, content, id) {
-          return h('div', { class: 'usa-accordion usa-accordion--bordered' },
-            h('h4', { class: 'usa-accordion__heading' },
-              h('button', {
-                type: 'button',
-                class: 'usa-accordion__button',
-                'aria-expanded': 'true',
-                'aria-controls': id
-              }, title)
-            ),
-            h('div', { id: id, class: 'usa-accordion__content' },
-              content
-            )
-          );
-        },
-        formatDate(date) {
-          return date ? new Date(date).toLocaleDateString('en-US', {
-            year: 'numeric',
-            month: 'long',
-            day: 'numeric'
-          }) : '';
-        },
-        indexView(title, date, preview) {
-          return h('div', { class: 'index-view' },
-            h('ul', { class: 'usa-collection partners-collection' },
-              h('div', { class: 'usa-collection__body' },
-                h('h3', { class: 'usa-collection__heading' },
-                  h('a', { class: 'partners-link caret', href: '#' }, title)
-                ),
-                h('div', { class: 'usa-collection__description partners-body' }, preview),
-                h('ul', { class: 'usa-collection__meta' },
-                  h('li', { class: 'usa-collection__meta-item' },
-                    h('time', { datetime: date }, date)
-                  )
-                )
-              )
-            )
-          );
-        },
-        entryView(title, date, body) {
-          return h('div', { class: 'entry-view' },
-            h('div', { class: 'padding-bottom-6' },
-              h('header', null,
-                h('h1', { class: 'partners-title' }, title)
-              ),
-              h('article', null,
-                h('div', { class: 'grid-row' },
-                  h('div', { class: 'tablet:grid-col-8 partners-body' },
-                    h('div', { class: 'partners-border' }),
-                    h('div', { class: 'margin-y-105' },
-                      h('time', { datetime: date }, date)
-                    ),
-                    h('div', { class: 'partners-border' }),
-                    h('div', { class: 'partners-body padding-top-3 padding-bottom-2' }, body),
-                    h('a', { href: '#', class: 'partners-body caret' }, 'Read more program updates')
-                  )
-                )
-              )
-            )
-          );
-        },
-        render() {
-          const entry = this.props.entry;
-          const title = entry.getIn(['data', 'title']) || '(Missing title)';
-          const body = this.props.widgetFor('body') || h('p', {}, '(Missing body text)');
-          const preview = this.props.widgetFor('preview') || h('p', {}, '(Missing preview text)');
-          const date = entry.getIn(['data', 'date']);
-          const formattedDate = this.formatDate(date);
-          const indexView = this.indexView(title, formattedDate, preview);
-          const entryView = this.entryView(title, formattedDate, body);
-
-          return h('div', {
-            class: 'container partners-container',
-            style: { backgroundColor: '#fff' }
-          },
-            this.accordion('Preview of index page listing', indexView, 'index-preview'),
-            h('br'),
-            this.accordion('Preview of program update entry', entryView, 'entry-preview'),
-          );
-        }
-      });
-
-      {% for style in site.styles %}
-        CMS.registerPreviewStyle("{{ style | relative_url }}");
-      {% endfor %}
-
-      CMS.registerPreviewTemplate('program_updates', ProgramUpdatePreview);
-    </script>    
+    <!-- Include the script that builds the page and powers Decap CMS -->
+    <script src="{{ '/assets/js/cms.js' | relative_url }}"></script> 
   </body>
 
 </html>
