--- a/admin/index.html
+++ b/admin/index.html
@@ -12,11 +12,13 @@ layout: null
 
   <body>
     <!-- Include the script that builds the page and powers Decap CMS -->
-    <script src="{{ '/assets/js/cms.js' | relative_url }}" defer></script>
+    <script src="{{ '/assets/js/cms.js' | relative_url }}"></script>
     <script>
-      {% for style in site.styles %}
-        CMS.registerPreviewStyle("{{ style | relative_url }}");
-      {% endfor %}      
+      window.onload = function() {
+        {% for style in site.styles %}
+          CMS.registerPreviewStyle("{{ style | relative_url }}");
+        {% endfor %}
+      };
     </script>
   </body>
 
